--- a/11-Redux/homework/01 - Exercises/package.json
+++ b/11-Redux/homework/01 - Exercises/package.json
@@ -8,8 +8,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "redux": "^4.0.5",
-    "webpack": "^5.31.0",
-    "webpack-cli": "^4.6.0"
+    "redux": "^4.0.5"
+  },
+  "devDependencies": {
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   }
 }
